# chair22

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
boa/: Cargo.toml  Makefile
boa-cli/: Cargo.toml
boa-cli/src/: main.rs
boa/src/: compile.rs  instructions.rs  lib.rs  modes.rs
boa/tests/: _11_nested_let.snek  _13_complex_let.snek  _14_super_complex_let.snek  _1_add1.snek  _2_sub1.snek  _7_double_simple_let.snek  _8_shadowing_simple_let.snek  _9_execution_in_expression_binding_let.snek  _fail_7_wrong_command1.snek
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx
server/: Cargo.toml
server/src/: main.rs
src/: compile.rs  expressions.rs  instructions.rs  main.rs  modes.rs  parse.rs
test/: adder_combo.snek  double_sub_both.run  double_sub_both.s  double_sub_both.snek  double_sub_left.snek  double_sub_right.snek  simple_add.run  simple_add.s  simple_let.run  simple_let.s  simple_let.snek  simple_mul.run  simple_mul.s  simple_sub.run  simple_sub.s  simple_sub.snek
tests/: _10_fail_define_inside.snek  _10_later_binding_available_let.snek  _12_triple_nested_let.snek  _4_fail_unclosed1.snek  _4_minus.snek  _5_times.snek  _6_fail_unclosed3.snek  _6_simple_let.snek  _7_double_simple_let.snek  _8_fail_wrong_command2.snek  _fail_5_unclosed2.snek  add1.run  add1.s  all_tests.rs  fail_2_duplicate.snek  fail_9_define_aot.snek  minus.run  minus.s  plus.run  plus.s  shadowing.run  shadowing.s  shadowing.snek  simple_let.run  simple_let.s  simple_let.snek
tests/infra/: mod.rs
viva/: Cargo.toml
(+14 files in other folders)
