[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
boa = { path = "../boa" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1"

